# banking

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/: test_account.cpp  test_mocks.cpp  test_transaction.cpp
